better scalafmt + Back consumer logic

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,1 +1,15 @@
-version = 2.7.5
+version = "2.7.5"
+maxColumn = 160
+docstrings = "ScalaDoc"
+assumeStandardLibraryStripMargin = true
+continuationIndent.defnSite = 2
+align = most
+align.preset = most
+align.arrowEnumeratorGenerator = false
+align.openParenCallSite = false
+align.openParenDefnSite = false
+newlines.alwaysBeforeTopLevelStatements = true
+newlines.alwaysBeforeElseAfterCurlyIf = false
+rewrite.rules = [SortModifiers, SortImports, PreferCurlyFors]
+includeCurlyBraceInSelectChains = false
+optIn.breakChainOnFirstMethodDot = true
