--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
   caliban:
     build:
       dockerfile: Dockerfile-Caliban
+      context: .
     environment:
       REDIS_HOST: "redis"
       PULSAR_HOST: "pulsar"
@@ -26,7 +27,8 @@ services:
 
   backend:
     build:
-      dockerfile: Dockerfile-Back
+      dockerfile: Dockerfile-Backend
+      context: .
     environment:
       REDIS_HOST: "redis"
       PULSAR_HOST: "pulsar"
@@ -35,7 +37,5 @@ services:
     image: nginx:latest
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - caliban
     ports:
       - "8088:8088"
